--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JAVASCRIPT</h1>
+     <h1>JAVASCRIPT</h1> 
 
 
 
@@ -16,6 +16,6 @@
 
 
 
-    <script src="./app.js"></script>
+    <script src="./Script.js"></script>
 </body>
 </html>
